# sweep

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  sweep.example.toml
.claude/workflows/: sweep-gui.js
.github/workflows/: ci.yml  release.yml
Formula/: sweep.rb
gui/: DESIGN_SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: api.ts  main.ts  router.ts  shell.ts  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs
gui/src/components/: button.ts  card.ts  checklist.ts  dom.ts  format.ts  icon.ts  index.ts  ring.ts  sizebar.ts  spinner.ts  toast.ts
gui/src/screens/: applications.ts  cleanup.ts  dashboard.ts  files.ts  maintenance.ts  privacy.ts  schedule.ts  spacelens.ts
gui/src/styles/: glass.css  global.css  tokens.css
src/: apps.rs  catalog.rs  cli.rs  config.rs  dupes.rs  exec.rs  explore.rs  fsutil.rs  gui_api.rs  lib.rs  main.rs  maintenance.rs  report.rs  schedule.rs  smart.rs  ui.rs  uninstall.rs
src/targets/: app_caches.rs  build_artifacts.rs  caches.rs  dev_tools.rs  large_files.rs  large_items.rs  leftovers.rs  mod.rs  node_modules.rs  privacy.rs  projects.rs  system_caches.rs  xcode.rs
tests/: cli.rs
