[package]
name = "sweep-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Sweep — a safe disk cleaner for macOS"
license = "MIT"

[[bin]]
name = "sweep-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sweep = { path = "../.." }
